# pairs-trading

./: README.md  data-downloader.py  find-cointegrated.py  flat-ui__data-Fri Jul 04 2025.csv  main.py  pyproject.toml
artifacts/backtest_20260417T191458Z/: equity_curve.csv  summary.json  trade_log.csv
artifacts/backtest_20260417T191458Z/pair_diagnostics/: DOC__WELL.csv  ES__SO.csv
artifacts/research_20260417T191401Z/: ranked_pairs.csv  summary.json
artifacts/research_20260417T191401Z/pair_diagnostics/: ES__SO.csv
artifacts/research_20260417T191454Z/: ranked_pairs.csv  summary.json
artifacts/research_20260417T191454Z/pair_diagnostics/: DOC__WELL.csv  ES__SO.csv
configs/: backtest.default.yaml  research.default.yaml
data/processed/: core_equities_plus_etfs.pkl
data/raw/: universe_metadata.pkl
src/stat_arb/: __init__.py  backtest.py  cli.py  config.py  data.py  reporting.py  selection.py  signals.py  universe.py
tests/: __init__.py  helpers.py  test_backtest.py  test_cli.py  test_selection.py  test_signals.py
