[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-arb-lab"
version = "0.1.0"
description = "Research-grade statistical arbitrage lab for daily EOD equities and ETFs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
]

[project.scripts]
stat-arb = "stat_arb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

